[improve] 1.重构行信息 Tuple3<行号，行开始位置，行结束位置>